k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-user-service
  labels:
    app: frontend-user
spec:
  type: ClusterIP
  selector:
    app: frontend-user
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-admin-service
  labels:
    app: frontend-admin
spec:
  type: ClusterIP
  selector:
    app: frontend-admin
  ports:
    - name: http
      port: 80
      targetPort: 80
